fixato overflow-y side bar

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ body{
     list-style: none;
 }
 
-.nav-top a, .nav-bottom a, .top-nav a{
+.nav-top a, .nav-bottom a, .top-nav a, .nav-bottom-playlist a{
     text-decoration: none;
     color: inherit;
     padding: 5px;
@@ -53,9 +53,10 @@ body{
     align-items: center;
 }
 
-.nav-bottom a{
+.nav-bottom a, .nav-bottom-playlist i{
     padding: 10px;
 }
+
 .nav-icon{
     width: 30px;
     margin-right: 5px;
@@ -67,7 +68,7 @@ body{
     margin-right: 5px;
 }
 
-.nav-bottom h4{
+.nav-bottom-playlist h4{
     text-transform: uppercase;
     padding-left: 10px;
     color: #fff;
@@ -100,6 +101,21 @@ body{
     width: 100%;
     padding-bottom: 10px;
     border-bottom: 1px solid #717171;
+}
+
+.nav-bottom{
+    flex-grow: 1;
+    overflow-y: auto;
+}
+
+.side-bar-top{
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+.nav-bottom-playlist i{
+    font-size: 30px;
 }
 
 /* -----------
@@ -250,11 +266,15 @@ footer{
 }
 
 .footer-left, .footer-right{
-    width: 20%;
+    width: 30%;
+}
+
+.footer-right{
+    justify-content: flex-end;
 }
 
 .footer-center{
-    width: 60%;
+    width: 40%;
 }
 
 .footer-left img{
@@ -307,5 +327,13 @@ footer{
 }
 
 .small-player-bar{
-    width: 30%;
+    width: 50%;
 }
+
+.footer-right i{
+    margin-right: 10px;
+}
+
+.small-player-bar .player-bar{
+    margin: 0;
+}    
